--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ selenium = "==3.141.0"
 ipython = "==7.2.0"
 black = "==18.9b0"
 model-mommy = "==1.6.0"
-ansible = "==2.7.7"
+ansible = ">=2.7.8"
 
 [packages]
 django-crispy-forms = "==1.7.2"
@@ -18,9 +18,10 @@ django-heroku = "==0.3.1"
 requests = "==2.21.0"
 gunicorn = "==19.9.0"
 Django = "==2.1.5"
-Jinja2 = "==2.10"
+Jinja2 = ">=2.10"
 "psycopg2-binary" = "==2.7.7"
 pip = "==18.0"
+urllib3 = ">=1.24.2"
 
 [requires]
 python_version = "3.6"
