--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ django-crispy-forms = "==1.7.2"
 django-heroku = "==0.3.1"
 requests = "==2.21.0"
 gunicorn = "==19.9.0"
-Django = "==2.1.5"
+Django = ">=2.1.6"
 Jinja2 = ">=2.10"
 "psycopg2-binary" = "==2.7.7"
 pip = "==18.0"
